fix pass reset modal on ios

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -346,3 +346,7 @@ h2.overdue {
     display: none;
     padding: 10px 30px 20px 30px;
 }
+
+.modal-backdrop {
+    display: none;
+}
